--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,13 @@
                                 <tags>${project.version}</tags>
                             </to>
                             <container>
+                             <extraDirectories>
+                                <permissions>
+                                    <permission>
+                                        <mode>755</mode>
+                                    </permission>
+                                </permissions>
+                            </extraDirectories>
                                 <args>
                                     <arg>$APP_ARGS</arg>
                                 </args>
