--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.5</version>
-		<relativePath/> <!-- lookup parent from repository test -->
+		<relativePath /> <!-- lookup parent from repository test -->
 	</parent>
 	
 	<groupId>uy.edu.ort.devops</groupId>
 	<artifactId>products-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>products-service</name>
 	<description>Proyecto Products Service Obligatorio</description>
 	
@@ -24,7 +23,7 @@
         <connection>scm:git:https://github.com/ignaciolopez409/products-service.git</connection>
         <developerConnection>scm:git:https://github.com/ignaciolopez409/products-service.git</developerConnection>
         <url>https://github.com/ignaciolopez409/products-service</url>
-        <tag>HEAD</tag>
+        <tag>products-service-0.0.1</tag>
     </scm>
     
 	<dependencies>
