--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	
 	<groupId>uy.edu.ort.devops</groupId>
 	<artifactId>products-service</artifactId>
-	<version>0.0.4</version>
+	<version>0.0.5-SNAPSHOT</version>
 	<name>products-service</name>
 	<description>Proyecto Products Service Obligatorio</description>
 	
@@ -23,7 +23,7 @@
         <connection>scm:git:https://github.com/ignaciolopez409/products-service.git</connection>
         <developerConnection>scm:git:https://github.com/ignaciolopez409/products-service.git</developerConnection>
         <url>https://github.com/ignaciolopez409/products-service</url>
-        <tag>products-service-0.0.4</tag>
+        <tag>HEAD</tag>
     </scm>
     
 	<dependencies>
