--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,9 @@ on:
 jobs:
   QUALITY_GATES_AND_TEST:
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[sonar skip]') || github.ref == 'refs/heads/develop'"
+    if: "!contains(github.event.head_commit.message, '[sonar skip]') && github.ref == 'refs/heads/develop'"
     env:
-      PROJECT: "orders"
+      PROJECT: "products"
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
@@ -35,9 +35,6 @@ jobs:
   BUILD_AND_PUSH_IMAGE:
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
     needs: ['QUALITY_GATES_AND_TEST']
     steps:
       # Checkout
@@ -71,7 +68,7 @@ jobs:
     env:
       INFRA_BRANCH: "main"
       INFRA_REPO_URL: "ignaciolopez409/infra-obligatorio-devops"
-      PROJECT: "orders"
+      PROJECT: "products"
     steps:
       - uses: actions/checkout@v2.4.0
         with:
@@ -82,14 +79,24 @@ jobs:
       - run: |
           POM_VERSION="${{ needs.BUILD_AND_PUSH_IMAGE.outputs.POM_VERSION }}"
           BRANCH="${{ needs.BUILD_AND_PUSH_IMAGE.outputs.BRANCH }}"
-          PROJECT="orders"
+          PROJECT="products"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           sed "s/tag: *.*/tag: $POM_VERSION/" -i environments/$BRANCH/values/$PROJECT.yaml
-          git add environments/$BRANCH/values/$PROJECT.yaml
-          git commit -m "[CD] - Changed $PROJECT -> $POM_VERSION | $BRANCH"
+          if [ $(git status --porcelain | wc -l) -eq "0" ]; then
+            echo "🔘 $PROJECT -> Not updated $POM_VERSION in $BRANCH."
+            NEED_PUSH=false
+          else
+            MSG="🟢 $PROJECT -> Updated $POM_VERSION in $BRANCH. Executing [CD] | $BRANCH"
+            NEED_PUSH=true
+            echo "$MSG"
+            git add environments/$BRANCH/values/$PROJECT.yaml
+            git commit -m "$MSG"
+          fi
+          echo "##[set-output name=pom_version;]$(echo $NEED_PUSH)"
       - name: Push changes
         uses: ad-m/github-push-action@master
+        if: ${{ steps.compile_output.outputs.pom_version }} == "true"
         with:
           github_token: ${{ secrets.PUSH_TOKEN }}
           branch: ${{ env.INFRA_BRANCH }}
